Mudança de arquitetura, NPC inimigo

--- a/style.css
+++ b/style.css
@@ -50,3 +50,13 @@ input{
     height: 20px;
     cursor: pointer;
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+}
